--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="宇杰的个人网站" />
+    <meta name="author" content="宇杰">
+    <meta name="keywords" content="宇杰">
+    <title>宇杰的个人网站</title>
     <title>宇杰的日志</title>
     <meta name="description" content="">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="shortcut icon" href="favicon.ico">
-
+    <link href="favicon.ico" rel="SHORTCUT ICON">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
@@ -51,7 +52,7 @@
 			<div class="ace-card-inner text-center">
 				<img class="avatar avatar-195" src="img/uploads/avatar/myself.jpg" width="195" height="195" alt="">
 				<h1>宇杰</h1>
-				<p class="text-muted">web lover</p>
+				<p class="text-muted">Computer enthusiast</p>
 				<ul class="ace-social clear-list">
 					电话:13225632330&nbsp;&nbsp;&nbsp;
 				</ul>
