--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="宇杰的个人网站" />
-    <meta name="author" content="宇杰">
-    <meta name="keywords" content="宇杰">
-    <title>宇杰的个人网站</title>
-    <title>宇杰的日志</title>
-    <meta name="description" content="">
+    <meta name="description" content="羽劼的个人网站" />
+    <meta name="author" content="羽劼">
+    <meta name="keywords" content="羽劼">
+    <title>羽劼的个人网站</title>
 
     <link href="favicon.ico" rel="SHORTCUT ICON">
     <!-- Google Fonts -->
@@ -51,7 +49,7 @@
         <article id="ace-card" class="ace-card bg-primary">
 			<div class="ace-card-inner text-center">
 				<img class="avatar avatar-195" src="img/uploads/avatar/myself.jpg" width="195" height="195" alt="">
-				<h1>宇杰</h1>
+				<h1>羽劼</h1>
 				<p class="text-muted">Computer enthusiast</p>
 				<ul class="ace-social clear-list">
 					电话:13225632330&nbsp;&nbsp;&nbsp;
