--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			</div>
 
 			<footer class="ace-card-footer">
-				<a class="btn btn-lg btn-block btn-thin btn-upper " href="https://mail.qq.com/cgi-bin/loginpage">联系我</a>
+				<a class="btn btn-lg btn-block btn-thin btn-upper " href="https://www.wjx.top/jq/44992299.aspx">联系我</a>
 			</footer>
 		</article><!-- #ace-card -->
 
